@@ -1,5 +1,11 @@
 2001-09-30  Kevin Vandersloot <kfv101@psu.edu>
 
+	* interface.c: bring back the disks list among other things
+
+	* callbacks.c: update the disk list.
+
+2001-09-30  Kevin Vandersloot <kfv101@psu.edu>
+
 	* proctable.c: bring back some more functionality
 
 	* callbacks.c, interface.c: ditto
